add structure of nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Fylo Landing Page Frontend Mentor</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="nav-bar">
+            <div>
+                <img src="images/logo.svg" alt="logo">                
+            </div>
+            <div>
+                <p>Features</p>
+                <p>Team</p>
+                <p>Sign in</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
