--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fylo Landing Page Frontend Mentor</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="nav-bar">
-            <div>
-                <img src="images/logo.svg" alt="logo">                
-            </div>
-            <div>
-                <p>Features</p>
-                <p>Team</p>
-                <p>Sign in</p>
-            </div>
+      <div class="nav-bar">
+        <div class="nav-bar-image">
+          <img src="images/logo.svg" alt="logo" />
         </div>
-
+        <div class="nav-bar-heading">
+          <div>Features</div>
+          <div>Team</div>
+          <div>Sign in</div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
