--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fylo Landing Page Frontend Mentor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div class="nav-bar">
-        <div class="nav-bar-image">
-          <img src="images/logo.svg" alt="logo" />
+
+        <div class="nav-bar">
+            <div class="nav-bar-image">
+                <img src="images/logo.svg" alt="logo" />
+            </div>
+
+            <div class="nav-bar-heading">
+                <div>Features</div>
+                <div>Team</div>
+                <div>Sign in</div>
+            </div>
+
         </div>
-        <div class="nav-bar-heading">
-          <div>Features</div>
-          <div>Team</div>
-          <div>Sign in</div>
+
+        <div class="files section">
+            <div class="file-info">
+                <h1>All your files in one secure location, accessible anywhere.</h1>
+                <p class="description">Fylo stores your most important files in one secure location. Access them wherever you need, share and
+                    collaborate with friends, family, and co-workers.</p>
+                    <form action="">
+                        <input type="email" placeholder="Enter your email" name="email" required >
+                        <input type="button" value="Get Started">
+                    </form>
+            </div>
+            <div class="file-image">
+                <img src="images/illustration-1.svg" alt="cover ">
+            </div>
+
         </div>
-      </div>
     </div>
-  </body>
+
+
+</body>
+
 </html>
