--- a/index.html
+++ b/index.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fylo Landing Page Frontend Mentor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-
-        <div class="nav-bar">
-            <div class="nav-bar-image">
-                <img src="images/logo.svg" alt="logo" />
-            </div>
-
-            <div class="nav-bar-heading">
-                <div>Features</div>
-                <div>Team</div>
-                <div>Sign in</div>
-            </div>
-
+      <div class="nav-bar">
+        <div class="nav-bar-image">
+          <img src="images/logo.svg" alt="logo" />
         </div>
 
-        <div class="files section">
-            <div class="file-info">
-                <h1>All your files in one secure location, accessible anywhere.</h1>
-                <p class="description">Fylo stores your most important files in one secure location. Access them wherever you need, share and
-                    collaborate with friends, family, and co-workers.</p>
-                    <form action="">
-                        <input type="email" placeholder="Enter your email" name="email" required >
-                        <input type="button" value="Get Started">
-                    </form>
-            </div>
-            <div class="file-image">
-                <img src="images/illustration-1.svg" alt="cover ">
-            </div>
-
+        <div class="nav-bar-heading">
+          <div>Features</div>
+          <div>Team</div>
+          <div>Sign in</div>
         </div>
+      </div>
+
+      <div class="files section">
+        <div class=" info">
+          <h1 class="heading">
+            All your files in one secure location, accessible anywhere.
+          </h1>
+          <p class="description">
+            Fylo stores your most important files in one secure location. Access
+            them wherever you need, share and collaborate with friends, family,
+            and co-workers.
+          </p>
+          <form action="">
+            <input
+              type="email"
+              placeholder="Enter your email"
+              name="email"
+              required
+            />
+
+            <input type="button" value="Get Started" />
+            <p>Please check your email</p>
+          </form>
+        </div>
+        <div class="file-image">
+          <img class="image" src="images/illustration-1.svg" alt="cover " />
+        </div>
+      </div>
+
+      <div class="productive section">
+        <div class="info">
+          <h1 class="heading">Stay productive, wherever you are</h1>
+          <p class="description">
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs</p>
+             <p class="description">
+              Securely share files
+            and folders with friends, family and colleagues for live
+            collaboration. No email attachments required!
+          </p>
+
+
+          <a href="#" class="fylo-work " 
+            >See how Fylo works
+            <i class="fa-solid fa-circle-arrow-right"></i>
+            </a>
+          <div class="info-person-card">
+            <div><img src="images/icon-quotes.svg" alt="" /></div>
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="info-founder">
+              <img
+                src="images/avatar-testimonial.jpg"
+                alt="photo of the founder "
+              />
+              <p class="info-name">Kyle Burton</p>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="prod-image">
+          <img class="image" src="images/illustration-2.svg" alt="cover" />
+        </div>
+      </div>
     </div>
-
-
-</body>
-
+  </body>
 </html>
