end productive section

--- a/index.html
+++ b/index.html
@@ -81,19 +81,23 @@
             <i class="fa-solid fa-circle-arrow-right"></i>
             </a>
           <div class="info-person-card">
-            <div><img src="images/icon-quotes.svg" alt="" /></div>
+            <img class="quote-icon" src="images/icon-quotes.svg" alt="icon-quotes" />
             <p>
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </p>
             <div class="info-founder">
-              <img
-                src="images/avatar-testimonial.jpg"
-                alt="photo of the founder "
-              />
-              <p class="info-name">Kyle Burton</p>
-              <p>Founder & CEO, Huddle</p>
+              <div>
+                <img
+                  src="images/avatar-testimonial.jpg"
+                  alt="photo of the founder "
+                  />
+              </div>
+              <div>
+                <p class="info-name">Kyle Burton</p>
+                <p class="info-dec">Founder & CEO, Huddle</p>
+              </div>
             </div>
           </div>
         </div>
