end responsive of productive section

--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 
       <div class="productive section">
         <div class="info">
-          <h1 class="heading">Stay productive, wherever you are</h1>
+          <h3 class="heading2">Stay productive, wherever you are</h3>
           <p class="description">
             Never let location be an issue when accessing your files. Fylo has
             you covered for all of your file storage needs</p>
              <p class="description">
-              Securely share files
-            and folders with friends, family and colleagues for live
+            Securely share files and folders with friends, family and colleagues for live
             collaboration. No email attachments required!
           </p>
 
