end access section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -37,7 +37,7 @@
       </div>
 
       <div class="files section">
-        <div class=" info">
+        <div class="info">
           <h1 class="heading">
             All your files in one secure location, accessible anywhere.
           </h1>
@@ -53,10 +53,9 @@
               name="email"
               required
             />
-
-            <input type="button" value="Get Started" />
-            <p>Please check your email</p>
+            <input type="submit" value="Get Started" />
           </form>
+          <p class="invalid-email">Please check your email</p>
         </div>
         <div class="file-image">
           <img class="image" src="images/illustration-1.svg" alt="cover " />
@@ -65,22 +64,26 @@
 
       <div class="productive section">
         <div class="info">
-          <h3 class="heading2">Stay productive, wherever you are</h3>
+          <h3 class="heading heading2">Stay productive, wherever you are</h3>
           <p class="description">
             Never let location be an issue when accessing your files. Fylo has
-            you covered for all of your file storage needs</p>
-             <p class="description">
-            Securely share files and folders with friends, family and colleagues for live
-            collaboration. No email attachments required!
+            you covered for all of your file storage needs
+          </p>
+          <p class="description">
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required!
           </p>
 
-
-          <a href="#" class="fylo-work " 
+          <a href="#" class="fylo-work"
             >See how Fylo works
             <i class="fa-solid fa-circle-arrow-right"></i>
-            </a>
+          </a>
           <div class="info-person-card">
-            <img class="quote-icon" src="images/icon-quotes.svg" alt="icon-quotes" />
+            <img
+              class="quote-icon"
+              src="images/icon-quotes.svg"
+              alt="icon-quotes"
+            />
             <p>
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
@@ -91,7 +94,7 @@
                 <img
                   src="images/avatar-testimonial.jpg"
                   alt="photo of the founder "
-                  />
+                />
               </div>
               <div>
                 <p class="info-name">Kyle Burton</p>
@@ -103,6 +106,25 @@
 
         <div class="prod-image">
           <img class="image" src="images/illustration-2.svg" alt="cover" />
+        </div>
+      </div>
+
+      <div class="access section">
+        <div class="head-and-desc">
+          <h3 class="heahing heading3">Get early access today</h3>
+          <p class="description">
+            It only takes a minute to sign up and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you.
+          </p>
+        </div>
+        <div class="login">
+          <form>
+              <input type="email" placeholder="email@exapmle.com">
+              
+              <input type="submit" value="Get Started For Free" class="button-start">
+          </form>
+          
         </div>
       </div>
     </div>
