--- a/index.html
+++ b/index.html
@@ -126,6 +126,48 @@
           </form>
           
         </div>
+
+      </div>
+
+      <div class="footer">
+        <div class="logo-footer">
+          <img src="images/logo.svg" alt="footer logo" >
+        </div>
+
+        <div class="footer-links">
+          <div class="icons">  
+            <div class="icon">          
+                <img src="images/icon-phone.svg" alt="phone icon">
+                <span>Phone: + 1-543-123-4567</span>
+            </div>
+
+            <div class="icon">
+                <img src="images/icon-email.svg" alt="email icon">
+                <span>example@fylo.com</span>
+            </div> 
+          </div>
+        
+
+        <div class="link">  
+          <a href="#">About Us</a>
+          <a href="#">Jobs</a>
+          <a href="#">Press</a>
+          <a href="#">Blog</a>
+        </div>
+
+        <div class="link">
+          <a href="#">Contact Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>   
+        </div>
+
+        <div class="social-icons">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+        </div>
+        </div>
       </div>
     </div>
   </body>
